src/input.css
@import 'tailwindcss';

* {
  font-family: 'Poppins', 'Inter', sans-serif;
  scrollbar-width: thin;
  scroll-behavior: smooth;
}

:root {
  --primary-color: oklch(69.6% 0.17 162.48);
  --primary-tint: oklch(95% 0.052 163.051);
  --primary-shade: oklch(43.2% 0.095 166.913);
  --second-color: oklch(68.5% 0.169 237.323);
  --second-tint: oklch(95.1% 0.026 236.824);
  --second-shade: oklch(44.3% 0.11 240.79);
  --third-color: ;
  --third-tint: ;
  --third-shade: ;
  --gray: oklch(44.6% 0.03 256.802);
  --gray-tint: oklch(92.9% 0.013 255.508);
  --gray-shade: oklch(27.8% 0.033 256.848);
}
.scroll-animate {
  animation: scroll 40s linear infinite;
}
@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}
.scroll-animate1 {
  animation: scroll1 35.5s linear infinite;
}
@keyframes scroll1 {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(50%);
  }
}
#preview {
  transition: 0.2s ease-in-out;
}
#preview.active {
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.8);
  transform: scale(1);
}
#video {
  transform: scale(0.5);
  transition: 0.2s ease-in-out;
}
#video.active {
  transform: scale(1);
}
/* .video-shadow {
  box-shadow: 0 0 50px #181818;
} */
.animate-scroll {
  animation: animate-scroll 80s linear infinite;
}
@keyframes animate-scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

